Fix background color on mobile app

--- a/template.distillery/sass!os.scss
+++ b/template.distillery/sass!os.scss
@@ -17,6 +17,7 @@ body {
     margin: 0;
     font-family: 'Raleway', sans-serif;
     font-size: 14px;
+    background-color: white;
 }
 
 a, a:visited {
